# closing_flow

./: .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: python-publish.yml
closing_flow/: __init__.py  closing_flow.py
src/: funcs.cpp  per_face_prin_curvature.cpp  per_face_prin_curvature.h
